--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-# Database configuration
-DB_USER=youruser
-DB_PASSWORD=yourpassword
-DB_NAME=yourdb
-DB_HOST=localhost
-DB_PORT=5432
+.gitignore
+.env
