some fixes, all endpoints work

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Database configuration
-DB_USER=youruser
-DB_PASSWORD=yourpassword
-DB_NAME=yourdb
+DB_USER=admin
+DB_PASSWORD=admin
+DB_NAME=truck_api_db
 DB_HOST=localhost
 DB_PORT=5432
